# dungeon

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  README.md  abilities-test.cpp  abilities.cpp  abilities.hpp  basic-abilities.cpp  basic-abilities.hpp  dice-test.cpp  dice.cpp  dice.hpp  enum.h  initial-abilities-test.cpp  initial-abilities.cpp  initial-abilities.hpp  race-test.cpp  race.cpp  race.hpp  tests.cpp
src/: CMakeLists.txt  Doxyfile  basic-abilities.cpp  roll-dice.hpp  tests.cpp
src/lib/: CMakeLists.txt  basic-abilities.cpp  initial-abilities.cpp  initial-abilities.hpp  race.cpp  race.hpp  roll-dice.cpp  roll-dice.hpp  table.hpp
src/lib/abilities/: CMakeLists.txt  basic.cpp  basic.hpp  initial.cpp  initial.hpp  streng-tab.cpp  streng-tab.hpp
src/lib/ability/: CMakeLists.txt  charis-tab.cpp  charis-tab.hpp  consti-tab.cpp  consti-tab.hpp  dexter-tab.cpp  dexter-tab.hpp  id.hpp  initial.cpp  initial.hpp  intell-tab.cpp  intell-tab.hpp  scores.cpp  scores.hpp  streng-tab.cpp  streng-tab.hpp  wisdom-tab.cpp  wisdom-tab.hpp
src/lib/erb-yml/: process-template
src/lib/race/: CMakeLists.txt  modified.cpp  modified.hpp  sex.hpp  species.hpp
src/test/: CMakeLists.txt  abilities-initial-test.cpp  ability-initial-test.cpp  catch.hpp  race-test.cpp  roll-dice-test.cpp  tests.cpp
